@@ -7,6 +7,8 @@
 - added function GWEN_CryptKey_SetKeySpec()
 - added gct-tool command "readkey"
 - added blowfish encryption/decryption when using OpenSSL
+- function GWEN_PluginDescription_GetLongDescrByFormat() now tries to find
+  the localized version of the long description
 
 
 2005/07/24: Martin Preuss<martin@libchipcard.de>
